# articulos

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
public/: delete.html  index.html
src/: App.vue  main.rs  router.ts
src/components/: EditableContent.vue
src/views/: Editor.vue
templates/: articulo.html  index.html
